# SelfPomodoro

./: .gitignore.md  Podfile  README.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  custom.md
.github/workflows/: ios-ci.yml  optim-cd.yml  optim-ci.yml
Assets.xcassets/Add.imageset/: Contents.json
Assets.xcassets/Key.imageset/: Contents.json
SelfPomodoro/: ContentView.swift  EnvironmentKeys.swift  SelfPomodoroApp.swift  Supabase.swift
SelfPomodoro.xcodeproj/: project.pbxproj
SelfPomodoroUITests/: SelfPomodoroUITests.swift
Sources/Models/: UserModel.swift
Tests/: SelfPomodoroTests.swift
UITests/: SelfPomodoroUITestsLaunchTests.swift
app/: README.md
backend/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  makefile  package-lock.json  package.json  serverless.yml
optim/: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
optim/app/: main.py
optim/app/data/round/: 123e4567-e89b-12d3-a456-426614174000.csv
optim/app/data/session/: 123e4567-e89b-12d3-a456-426614174000.csv
optim/app/services/csv/: csv_handler.py
optim/app/services/dynamodb/: _dynamodb_creator.py  dynamodb_creater.py  dynamodb_handler.py
optim/app/services/optimize/: bayesian_optimizer.py
optim/docs/: Deploy.md  DynamoSchema.md  PLAN.md
optim/tests/: main.py
optim/tests/data/session/: 123e4567-e89b-12d3-a456-426614174000.csv
optim/tests/services/csv/: csv_handler.py
optim/tests/services/dynamodb/: dynamodb_handler.py
optim/tests/services/optimize/: bayesian_optimizer.py
(+204 files in other folders)
