[project]
name = "optim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "ruff>=0.11.12",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "ty>=0.0.1a7",
    "uvicorn>=0.34.3",
]
[tool.setuptools.packages.find]
where = ["."]