[project]
name = "optim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.28",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "ty>=0.0.1a7",
    "uvicorn>=0.34.3",
]
[tool.setuptools.packages.find]
where = ["."]
